--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,9 @@
 {{end}}
 {{define "footer"}}
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="static/raphael-min.js"></script>
+  <script type="text/javascript" src="static/raphael-min.js"></script>
+  <script type="text/javascript" src="static/utility.js"></script>
+  <script type="text/javascript" src="static/arrow.js"></script>
   <script type="text/javascript" src="static/protoml.js"></script>
 </body>
 </html>
