minor changes from code review

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="static/raphael-min.js"></script>
   <script type="text/javascript" src="static/arrow.js"></script>
   <script type="text/javascript" src="static/protoml.js"></script>
+  <script type="text/javascript" src="static/sprintf.min.js"></script>
 </body>
 </html>
 {{end}}
