--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="static/raphael-min.js"></script>
   <script type="text/javascript" src="static/arrow.js"></script>
+  <script type="text/javascript" src="static/ace.js"></script>
+  <script type="text/javascript" src="static/events.js"></script>
   <script type="text/javascript" src="static/protoml.js"></script>
   <script type="text/javascript" src="static/sprintf.min.js"></script>
 </body>
