--- a/templates/HelloWorld.html
+++ b/templates/HelloWorld.html
@@ -1,12 +1,52 @@
 {{define "content"}}
 {{template "header" .}}
-<div class="menu">
-  <div class="button" onclick="test();">Add Transform</div>
+<div class="topNav">
+  <div class="menu">Settings
+    <ul>
+      <li onclick="test();">Add Transform</li>
+      <li>Upload File</li>
+      <li>Search</li>
+      <li>Transform
+        <ul>
+          <li onclick="transformTab('.settings');">Edit Settings</li>
+          <li onclick="transformTab('.code');">Edit Code</li>
+          <li onclick="deleteTransform();">Delete</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </div>
 <div>
   <div id="movie"></div>
 </div>
 <div id="raphael">
+</div>
+<div id="MASK"></div>
+<div id="transform">
+  <div class='box'>
+    <div class='lBox'></div>
+    <div class='rBox'></div>
+    <div class='settings hidden'>
+      <div class='inner'>
+        <div class="title">Settings:</div>
+        <div class="setting">Setting 1:<input type="text"></text></div>
+        <div class="setting">Setting 2:<input type="text"></text></div>
+        <div class="setting">Setting 3:<input type="text"></text></div>
+      </div>
+    </div>
+    <div class='code hidden'>
+      <div class='inner'>
+        <div class="title">Code:</div>
+        <div id="editor">
+          class BharathSucks:
+            def __init__(self):
+              self.purple = "pink"
+            def run(self):
+              return self.purple
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {{template "footer"}}
 {{end}}
