--- a/static/protoml.css
+++ b/static/protoml.css
@@ -39,10 +39,37 @@ body { margin:0; background: #eee; }
 }
 .lBox { float:left; background-color: #FF2E2E;  height: 40px; width: 20px; border-radius: 0 20px 20px 0; margin-top:30px;}
 .rBox { float:right; background-color: #009E1D; height: 40px; width: 20px; border-radius: 20px 0 0 20px; margin-top:30px; }
-.settings, .code { position:fixed; left:0; top:0; z-index:100; width:100%; height:100%; background-color:rgba(100,100,100,.8); }
-.settings .inner, .code .inner { margin:150px auto; width:800px; height:500px; background-color:#fff; border-radius:10px; border:1px solid #555; }
-.inner .title { margin:25px; text-align:center; font-weight:bold; font-size:20px; }
-.settings .inner .setting { margin:25px; }
+
+/* Lightbox */
+.lightbox { position:fixed; left:0; top:0; z-index:100; width:100%; height:100%; background-color:rgba(100,100,100,.8); }
+.lightbox .whiteBox {
+    margin:150px auto; padding:25px; 
+    width:800px; height:500px;
+    background-color:#fff;
+    border-radius:10px;
+    border:1px solid #555;
+    position:relative;
+}
+.content {width:100%; height:100%;}
+.content .title {text-align:center; font-weight:bold; font-size:20px; }
+.lightbox .boxclose{
+    position:absolute;
+    top:-5px;
+    right:-5px;
+    cursor:pointer;
+    color: #fff;
+    border: 1px solid #AEAEAE;
+    border-radius: 30px;
+    background: #605F61;
+    font-size: 31px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;       
+}
+.lightbox .boxclose::before {
+    content: "×";
+}
 #editor { width:100%; height:300px; }
 
 /* Top Nav Bar */
