--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,8 @@
   <script type="text/javascript" src="static/ace.js"></script>
   <script type="text/javascript" src="static/events.js"></script>
   <script type="text/javascript" src="static/protoml.js"></script>
+  <script type="text/javascript" src="static/search.js"></script>
+  <script type="text/javascript" src="static/lightbox.js"></script>
   <script type="text/javascript" src="static/sprintf.min.js"></script>
 </body>
 </html>
