--- a/templates/header.html
+++ b/templates/header.html
@@ -1,21 +1,23 @@
 {{define "header"}}
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="static/protoml.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/protoml.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/semantic.min.css" />
     <title>{{.Title}}</title>
   </head>
   <body>
 {{end}}
 {{define "footer"}}
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="static/raphael-min.js"></script>
-  <script type="text/javascript" src="static/arrow.js"></script>
-  <script type="text/javascript" src="static/ace.js"></script>
-  <script type="text/javascript" src="static/events.js"></script>
-  <script type="text/javascript" src="static/protoml.js"></script>
-  <script type="text/javascript" src="static/search.js"></script>
-  <script type="text/javascript" src="static/lightbox.js"></script>
-  <script type="text/javascript" src="static/sprintf.min.js"></script>
-</body>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="static/javascript/raphael-min.js"></script>
+    <script type="text/javascript" src="static/javascript/arrow.js"></script>
+    <script type="text/javascript" src="static/javascript/ace.js"></script>
+    <script type="text/javascript" src="static/javascript/events.js"></script>
+    <script type="text/javascript" src="static/javascript/protoml.js"></script>
+    <script type="text/javascript" src="static/javascript/search.js"></script>
+    <script type="text/javascript" src="static/javascript/lightbox.js"></script>
+    <script type="text/javascript" src="static/javascript/sprintf.min.js"></script>
+    <script type="text/javascript" src="static/javascript/semantic.min.js"></script>
+  </body>
 </html>
 {{end}}
