--- a/static/css/protoml.css
+++ b/static/css/protoml.css
@@ -22,6 +22,7 @@ body { margin:0; background: #eee; }
     height:100%;
 }
 .hidden { display: none; }
+
 /* Transform boxes */
 .box {
     display:inline-block;
@@ -40,7 +41,14 @@ body { margin:0; background: #eee; }
 .lBox { float:left; background-color: #FF2E2E;  height: 40px; width: 20px; border-radius: 0 20px 20px 0; margin-top:30px;}
 .rBox { float:right; background-color: #009E1D; height: 40px; width: 20px; border-radius: 20px 0 0 20px; margin-top:30px; }
 
-/* Lightbox */
+header .header {
+    display: inline;
+}
+
+/* 
+
+/*
+/*x Lightbox /
 .lightbox { position:fixed; left:0; top:0; z-index:100; width:100%; height:100%; background-color:rgba(100,100,100,.8); }
 .lightbox .whiteBox {
     margin:150px auto; padding:25px; 
@@ -72,7 +80,7 @@ body { margin:0; background: #eee; }
 }
 #editor { width:100%; height:300px; }
 
-/* Top Nav Bar */
+/ Top Nav Bar /
 .topNav { width:100%; height: 50px; background-color:#666; }
 .menu {
     background-color:#555;
@@ -122,3 +130,4 @@ ul li ul {
 ul li:hover { background: #555; color:#fff; }
 ul li ul { display:none; }
 ul li:hover ul { display:block; }
+*/
