--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
-  <script type="text/javascript" src="static/protoml.js"></script>
+  <script type="text/javascript" src="static/javascript/protoml.js"></script>
   </body>
 </html>
