cleaned up Barath's merge, added early DAG

--- a/templates/HelloWorld.html
+++ b/templates/HelloWorld.html
@@ -1,19 +1,9 @@
 {{define "content"}}
 {{template "header" .}}
-<!--
-
-Blue:
-#6d9eeb
-
-Orange:
-#f6b26b
-
--->
-
 <header>
   <div class="ui fixed inverted menu">
     <div class="item">
-      <h5 class="ui header" style="color:#6d9eeb">Proto</h5><h5 class="ui header" style="color:#f6b26b">ML</h5>
+      <h5 class="ui header orange">Proto</h5><h5 class="ui header headblue">ML</h5>
     </div>
     <a class="item addtransform">
       <i class="icon add sign"></i>
