--- a/templates/header.html
+++ b/templates/header.html
@@ -10,8 +10,11 @@
 {{define "footer"}}
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="static/javascript/raphael-min.js"></script>
+    <script type="text/javascript" src="static/javascript/dagre.min.js"></script>
     <script type="text/javascript" src="static/javascript/arrow.js"></script>
     <script type="text/javascript" src="static/javascript/ace.js"></script>
+    <script type="text/javascript" src="static/javascript/dag.js"></script>
+    <script type="text/javascript" src="static/javascript/node.js"></script>
     <script type="text/javascript" src="static/javascript/events.js"></script>
     <script type="text/javascript" src="static/javascript/protoml.js"></script>
     <script type="text/javascript" src="static/javascript/search.js"></script>
