--- a/templates/HelloWorld.html
+++ b/templates/HelloWorld.html
@@ -86,7 +86,7 @@
           <th>Value:</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody class="searchtransform rows">
         <tr>
           <td>Data1</td>
           <td>Value1</td>
