Fix input closing tags

--- a/templates/HelloWorld.html
+++ b/templates/HelloWorld.html
@@ -36,9 +36,9 @@
     <div class='settings hidden'>
       <form name="settings" action="/save" method="post">
         <div class="title">Settings:</div>
-        <div class="setting">Setting 1:<input type="text" name="input1"></text></div>
-        <div class="setting">Setting 2:<input type="text" name="input2"></text></div>
-        <div class="setting">Setting 3 (int):<input type="text" name="input3"></text></div>
+        <div class="setting">Setting 1:<input type="text" name="input1"></input></div>
+        <div class="setting">Setting 2:<input type="text" name="input2"></input></div>
+        <div class="setting">Setting 3 (int):<input type="text" name="input3"></input></div>
         <input type="submit" value="Save">
      </form>
     </div>
