--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="static/javascript/jsquery.jsPlumb-1.5.3-min.js"></script>
     <script type="text/javascript" src="static/javascript/dagre.min.js"></script>
     <script type="text/javascript" src="static/javascript/ace.js"></script>
+    <script type="text/javascript" src="static/javascript/api.js"></script>
     <script type="text/javascript" src="static/javascript/dag.js"></script>
     <script type="text/javascript" src="static/javascript/node.js"></script>
     <script type="text/javascript" src="static/javascript/protoml.js"></script>
